--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "domlint-ui",
+  "version": "0.4.6",
   "description": "DOMLint UI (React)",
   "homepage": "https://github.com/guoyunhe/domlint-ui#readme",
   "bugs": {
@@ -16,8 +17,14 @@
     "email": "i@guoyunhe.me"
   },
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "CHANGELOG.md",
@@ -28,17 +35,18 @@
     "build": "rive build",
     "build:watch": "rive build --watch",
     "ci:eslint": "eslint -f json src -o ./.ci/eslint.json",
-    "lint": "eslint . && stylelint \"**/*.{css,less,scss}\"",
-    "lint:fix": "prettier --write . && eslint --fix . && stylelint --fix \"**/*.{css,less,scss}\"",
+    "lint": "eslint . && stylelint --allow-empty-input \"**/*.{css,less,scss}\"",
+    "lint:fix": "prettier --write . && eslint --fix . && stylelint --allow-empty-input --fix \"**/*.{css,less,scss}\"",
     "prepare": "husky",
     "start": "rive start",
-    "test": "rive test",
-    "test:ui": "rive test --ui",
-    "test:watch": "rive test --watch"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest"
   },
   "commitlint": {
     "extends": [
-      "ali"
+      "@commitlint/config-conventional"
     ]
   },
   "lint-staged": {
@@ -53,32 +61,40 @@
       "stylelint-prettier/recommended"
     ]
   },
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "domlint": "^0.4.9"
+  },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@mdx-js/react": "^3.1.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.17.29",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
-    "commitlint-config-ali": "^1.1.0",
-    "eslint": "^9.23.0",
-    "eslint-config-ali": "^16.1.1",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
+    "@types/node": "^22.17.2",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "eslint": "^9.33.0",
+    "eslint-config-ali": "^16.5.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "happy-dom": "^17.6.3",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.0",
-    "prettier": "^3.5.3",
-    "prettier-config-ali": "^1.3.2",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
+    "prettier-config-ali": "^1.5.0",
     "react": "^18.3.1",
-    "react-doc-ui": "^2.3.0",
+    "react-doc-ui": "^2.4.0",
     "react-dom": "^18.3.1",
-    "rive": "^3.0.1",
-    "stylelint": "^16.17.0",
-    "stylelint-config-ali": "^2.1.2",
+    "rive": "^3.1.3",
+    "stylelint": "^16.23.1",
+    "stylelint-config-ali": "^2.3.0",
     "stylelint-prettier": "^5.0.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
@@ -88,10 +104,5 @@
     "doc": {
       "basename": "/domlint-ui/"
     }
-  },
-  "dependencies": {
-    "classnames": "^2.5.1",
-    "domlint": "^0.4.5"
-  },
-  "version": "0.4.6"
+  }
 }
