--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es2020",
     "lib": ["esnext", "dom", "dom.iterable"],
     "allowJs": true,
     "checkJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": ["node", "rive/globals"],
-    "jsx": "react-jsx"
+    "types": ["node", "rive/globals", "vitest/globals"],
+    "jsx": "react-jsx",
+    "strict": true
   },
   "exclude": [".rive", "build", "coverage", "dist", "node_modules"]
 }
