--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/guoyunhe/domlint-ui.git"
   },
   "funding": "https://github.com/sponsors/guoyunhe",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "author": {
     "name": "Guo Yunhe",
     "email": "i@guoyunhe.me"
